Fix spacing problem.

--- a/styles/main.css
+++ b/styles/main.css
@@ -104,6 +104,7 @@ span.title {
   font-size: 2rem;
   font-weight: 300;
   color: #fff;
+  padding-left: 16px;
 }
 
 #weather-icon {
